@@ -1,39 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-    <head>
-        <title>CSS Test: Clear set to 'right' and negative margin with earlier right floated boxes</title>
-        <link rel="author" title="WebKit" href="http://www.webkit.org/">
-        <link rel="help" href="http://www.w3.org/TR/CSS21/visuren.html#flow-control">
-        <meta name="flags" content="">
-        <meta name="assert" content="Boxes with 'clear: both' and collapsing margins need to clear earlier right floated boxes.">
-        <style type="text/css">
-            div
-            {
-                width: 2in;
-            }
-            div
-            {
-                height: 1in;
-                width: 1in;
-            }
-            #div1
-            {
-                float: right;
-                background-color: orange;
-            }
-            #div2
-            {
-                margin-top: -0.5in;
-                background: blue;
-                clear: both;
-            }
-        </style>
-    </head>
-    <body>
-        <p>Test passes if the blue box is directly below the orange box.</p>
-        <div>
-            <div id="div1"></div>
-        </div>
-        <div id="div2"></div>
-    </body>
-</html>
